--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
-            "type": "debugpy",
+            "name": "Run Uvicorn",
+            "type": "python",
             "request": "launch",
-            "program": "app.py",
+            "module": "uvicorn",
+            "args": [
+                "main:app",
+                "--host",
+                "0.0.0.0",
+                "--port",
+                "80"
+            ],
             "console": "integratedTerminal"
         }
     ]
