--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-openai
-chainlit
+openai>=1.46.1, <2.0.0
+chainlit>=1.2.0, <2.0.0
 python_dotenv>=1.0.0, <2.0.0
 pandas>=2.2.2, <3.0.0
 pillow>=10.4.0, <11.0.0
+httpx>=0.27.2, <1.0.0
